--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "@vueuse/core": "^13.9.0",
     "axios": "^1.11.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.12",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
+    "vue-textarea-autosize": "^1.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
