--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@tailwindcss/vite": "^4.1.12",
     "@vueuse/core": "^13.9.0",
     "axios": "^1.11.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^16.2.1",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.12",
+    "uuid": "^12.0.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-textarea-autosize": "^1.1.1"
